--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,23 +1,33 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: whitesmoke;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-image: url(/assets/img/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .joueur {
   width: 20em;
   height: 25em;
   border: 2px solid black;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .joueurCar {
   width: 20em;
   height: 25em;
   border: 3px solid black;
+  border-radius: 10px;
   position: absolute;
-  top: 25em;
+  top: 10em;
   right: 40%;
 }
 
+.transition {
+  transition: all 2s ease;
+}
 .historique {
   width: 50%;
   height: 10em;
@@ -25,7 +35,7 @@ body {
   position: absolute;
   bottom: 0px;
   right: 0%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .choixCombat {
@@ -38,8 +48,8 @@ body {
 
 .adversaire {
   width: 25em;
-  height: 25em;
   border: 2px solid black;
+  border-radius: 10px;
   position: absolute;
   top: 10em;
   right: 40%;
@@ -50,6 +60,7 @@ body {
   width: 20em;
   height: 16em;
   border: 2px solid black;
+  border-radius: 10px;
   position: absolute;
   right: 1%;
 }
@@ -57,8 +68,14 @@ body {
 h2 {
   text-align: center;
   border-bottom: solid 2px black;
+  border-radius: 10px;
   margin-top: 2px;
   margin-bottom: 5px;
+  color: black;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .btn {
@@ -80,10 +97,33 @@ h2 {
 }
 
 .none {
+  width: 0px;
+  height: 0px;
+  border: 0 solid;
+}
+
+.noneDisplay {
   display: none;
 }
 
 a {
   text-decoration: none;
   color: black;
+}
+
+img {
+  border-radius: 10px;
+}
+
+li {
+  list-style: none;
+}
+
+.playerCar {
+  display: flex;
+}
+.playerImg {
+  margin-left: 5%;
+  margin-right: 2%;
+  width: 42px;
 }
