--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  background-image: url(/assets/img/background.jpg);
+  background-image: url("/assets/img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
