--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,11 +99,7 @@ h2 {
 .none {
   width: 0px;
   height: 0px;
-  border: 0 solid;
-}
-
-.noneDisplay {
-  display: none;
+  visibility: hidden;
 }
 
 a {
