--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,11 @@ body {
 }
 .historique {
   width: 50%;
-  height: 10em;
   border: 3px solid #7fffd4;
+  border-bottom: 0px;
   position: absolute;
   bottom: 0px;
-  right: 0%;
+  right: 0px;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -86,6 +86,13 @@ h2 {
   font-size: large;
 }
 
+button:disabled,
+button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
+
 .bouttons {
   display: inline;
   margin: 1%;
@@ -122,4 +129,28 @@ li {
   margin-left: 5%;
   margin-right: 2%;
   width: 42px;
+}
+
+#playerHealth,
+#enemyHealth {
+  position: relative;
+  height: 30px;
+  width: 250px;
+  border: white 3px solid;
+  border-radius: 3px;
+  margin-right: 20px;
+  display: inline-block;
+  border: 1px solid black;
+  margin-left: 10%;
+}
+
+#playerHealthBar,
+#enemyHealthBar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: lightgreen;
+  display: inline-block;
 }
