--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,7 @@ body {
   border: 3px solid #ff3333;
   position: absolute;
   bottom: 0px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .adversaire {
@@ -141,7 +142,7 @@ li {
   margin-right: 20px;
   display: inline-block;
   border: 1px solid black;
-  margin-left: 10%;
+  margin-left: 18%;
 }
 
 #playerHealthBar,
@@ -153,4 +154,46 @@ li {
   width: 100%;
   background: lightgreen;
   display: inline-block;
+}
+
+.typePlayer {
+  position: absolute;
+  top: 25%;
+  right: 45%;
+  width: 20em;
+  border: 3px solid black;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: inline-block;
+}
+
+.mage {
+  display: inline-flex;
+}
+
+.voleur {
+  display: inline-flex;
+}
+
+.guerrier {
+  top: 20%;
+  left: 5%;
+  display: inline-flex;
+}
+
+.classTitle {
+  align-self: center;
+  margin: 0 auto;
+  margin-left: 5%;
+  font-size: xx-large;
+}
+
+.imgGuerrier {
+  position: relative;
+  width: 30%;
+  height: 30%;
+}
+
+.imgGuerrier img {
+  width: 100%;
+  height: 100%;
 }
