--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -87,8 +87,9 @@ p {
 #myPopup1 {
   top: 10%;
   left: 80%;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
+  background-image: url("../img/arcade.gif");
 }
 
 #myPopup2 {
